@@ -14,6 +14,6 @@ LaTeX: pdfLaTeX
 
 BuildType: Package
 PackageInstallArgs: --no-multiarch --with-keep.source
-PackageBuildArgs: --resave-data     --no-build-vignettes
+PackageBuildArgs: --resave-data     --compact-vignettes=gs+qpdf
 PackageCheckArgs: --as-cran
 PackageRoxygenize: rd,collate,namespace
