@@ -242,9 +242,9 @@ load(url("http://goo.gl/VPdxlS"))
 
 \subsubsection{Model initialization for a fixed number of number of topics}
 
-As with all mixed-membership topic models, the posterior is intractable and non-convex, which creates a multimodal estimation problem that can be sensitive to initialization. Put differently, the answers the estimation procedure comes up with may depend on starting values of the parameters (e.g., the distribution over words for a particular topic). There are two approaches to dealing with this that the \pkg{STM} package facilitates. The first is to use an intitialization based on the method of moments, which is deterministic and globally consistent under reasonable conditions \citep{arora2012practical, chaptermulti}. This is known as a spectral initialization because it uses a spectral decomposition (non-negative matrix factorization) of the word co-occurrence matrix. In practice we have found this intialization to be very helpful. This can be chosen by setting \code{init.type = "Spectral"} in the \code{stm} function. We use this option in the above example. This means that no matter the seed that is set, the same results will be generated.\footnote{While the initialization is deterministic, we have observed in some circumstances it may not produce exactly the same results across machines due to differences in numerical precision. It will, however, always produce the same result within a machine for a given version of \pkg{stm}.} When the vocabulary is larger than 10,000 words, the function will temporarily subset the vocabulary size for the duration of the initialization. 
+As with all mixed-membership topic models, the posterior is intractable and non-convex, which creates a multimodal estimation problem that can be sensitive to initialization. Put differently, the answers the estimation procedure comes up with may depend on starting values of the parameters (e.g., the distribution over words for a particular topic). There are two approaches to dealing with this that the \pkg{STM} package facilitates. The first is to use an initialization based on the method of moments, which is deterministic and globally consistent under reasonable conditions \citep{arora2012practical, chaptermulti}. This is known as a spectral initialization because it uses a spectral decomposition (non-negative matrix factorization) of the word co-occurrence matrix. In practice we have found this intialization to be very helpful. This can be chosen by setting \code{init.type = "Spectral"} in the \code{stm} function. We use this option in the above example. This means that no matter the seed that is set, the same results will be generated.\footnote{While the initialization is deterministic, we have observed in some circumstances it may not produce exactly the same results across machines due to differences in numerical precision. It will, however, always produce the same result within a machine for a given version of \pkg{stm}.} When the vocabulary is larger than 10,000 words, the function will temporarily subset the vocabulary size for the duration of the initialization. 
 
-The second approach is to initialize the model with a short run of a collapsed Gibbs sampler for LDA. For completeness researchers can also initialize the model randomly, but this is generally not recommended. Because it provides a balance of speed, reproducibility and quality, the default is \code{init.type = "LDA"}; however, in practice, we generally recommend using the spectral initialization as we have found it to produce the best results consistently \citep{chaptermulti}.
+The second approach is to initialize the model with a short run of a collapsed Gibbs sampler for LDA. For completeness researchers can also initialize the model randomly, but this is generally not recommended. In practice, we generally recommend using the spectral initialization as we have found it to produce the best results consistently \citep{chaptermulti}.\footnote{Starting with version \code{1.3.0} the default initialization strategy was changed to \code{Spectral} from \code{LDA}. In order to clarify  }
 
 
 \subsubsection{Model selection for a fixed number of number of topics}
